--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,3 +10,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.springframework.security.web.*=debug
+
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
